Search funcionando a media maquina (para corregir)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="business">Business</string>
     <string name="entertainment">Entertainment</string>
     <string name="health">Health</string>
+    <string name="buscar">Ingrese tema a buscar...</string>
 
 
 </resources>
