--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,6 @@
     <string name="entertainment">Entertainment</string>
     <string name="health">Health</string>
     <string name="buscar">Ingrese tema a buscar...</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="signout">Sign out</string>
 
 </resources>
