IM20181212 - Funcionalidad del login terminada, le falta diseño

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="health">Health</string>
     <string name="buscar">Ingrese tema a buscar...</string>
     <string name="signout">Sign out</string>
+    <string name="registrate">Regístrate:</string>
 
 </resources>
